[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
color-eyre = "0.6.2"
folding-tree = { path = "./crates/folding-tree" }
itertools = "0.11.0"
miette = { version = "5.5.0", features = ["fancy"] }
mist-cli = { path = "./crates/cli" }
mist-cg-vpr = { path = "./crates/cg-vpr" }
mist-codegen-wasm = { path = "./crates/codegen-wasm" }
mist-core = { path = "./crates/core" }
mist-syntax = { path = "./crates/syntax" }
salsa = { git = "https://github.com/salsa-rs/salsa.git", package = "salsa-2022" }
silvers = { git = "https://github.com/oeb25/vipers.git" }
smol_str = "0.2.0"
tempfile = "3.4.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-test = "0.2.4"
viperserver = { git = "https://github.com/oeb25/vipers.git" }
# dev-dependencies
insta = "1.29.0"
proptest = "1.1.0"


# [patch."https://github.com/oeb25/vipers.git"]
# silvers = { path = "../vipers/silvers" }
# viperserver = { path = "../vipers/server" }

[profile.release]
debug = true
