[package]
name = "mist-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.19.0"
itertools = { workspace = true }
mist-syntax = { workspace = true }
mist-core = { workspace = true }
mist-viper-backend = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
viperserver = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "5.4.0"
derive-new = "0.5.9"
