[package]
name = "mist-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
rowan = "0.15.10"

color-eyre = { workspace = true }
itertools = "0.10.5"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.38"
derive_more = "0.99.17"
bitflags = "1.3.2"
tracing = "0.1.37"

[dev-dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.50"
quote = "1.0.23"
ungrammar = "1.16.1"
