[package]
name = "mist-cg-vpr"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
derive-new = "0.5.9"
itertools.workspace = true
la-arena = "0.3.0"
miette.workspace = true
mist-core.workspace = true
mist-syntax.workspace = true
salsa.workspace = true
silvers.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
