[package]
name = "mist-cli"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
dotenvy = "0.15.6"
futures-util = "0.3.26"
itertools.workspace = true
miette.workspace = true
mist-cg-vpr.workspace = true
mist-core.workspace = true
mist-syntax.workspace = true
spinners = "4.1.0"
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
viperserver.workspace = true
color-backtrace = "0.5.1"
