[package]
name = "mist-core"
version.workspace = true
edition = "2021"

[dependencies]
bitflags = "2.0.1"
derive_more = "0.99.17"
derive-new = "0.5.9"
ena = "0.14.0"
folding-tree.workspace = true
itertools.workspace = true
la-arena = "0.3.0"
miette.workspace = true
mist-syntax.workspace = true
owo-colors = "3.5.0"
petgraph = "0.6.3"
salsa.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tracing-test.workspace = true
tracing.workspace = true

[dev-dependencies]
insta = "1.29.0"
proptest = "1.1.0"
