[package]
name = "mist-core"
version.workspace = true
edition = "2021"

[dependencies]
bitflags = "2.0.1"
derive_more = "0.99.17"
derive-new = "0.5.9"
ena = "0.14.0"
folding-tree.workspace = true
itertools.workspace = true
la-arena = "0.3.0"
miette.workspace = true
mist-syntax.workspace = true
owo-colors = "3.5.0"
petgraph = "0.6.3"
salsa.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tracing-test.workspace = true
tracing.workspace = true
indexmap = "2.0.0"

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
