[package]
name = "mist-lsp"
version.workspace = true
edition = "2021"

[dependencies]
dashmap = "5.4.0"
derive-new = "0.5.9"
futures-util = "0.3.28"
itertools.workspace = true
miette.workspace = true
mist-cli.workspace = true
mist-cg-vpr.workspace = true
mist-core.workspace = true
mist-syntax.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-lsp = "0.19.0"
tracing-subscriber.workspace = true
tracing.workspace = true
viperserver.workspace = true
salsa.workspace = true
crossbeam-channel = "0.5.8"

[dev-dependencies]
insta.workspace = true
