[package]
name = "mist-syntax"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13"
rowan = "0.15.10"

color-eyre = { workspace = true }
itertools = "0.10.5"
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = { workspace = true }
derive_more = "0.99.17"
bitflags = "2.0.2"
tracing = { workspace = true }

[dev-dependencies]
heck = "0.4.0"
proc-macro2 = "1.0.50"
quote = "1.0.23"
ungrammar = "1.16.1"
